force-app/main/default/objects/Dossier__c/Dossier__c.object-meta.xml
<CustomObject>
    <label>Dossier</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>N° de Dossier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dossiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>