force-app/main/default/objects/Dossier__c/fields/AB__c.field-meta.xml
<CustomField>
    <fullName>AB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AB</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (AB)</relationshipLabel>
    <relationshipName>Dossiers3</relationshipName>
    <type>Lookup</type>
</CustomField>