force-app/main/default/objects/Dossier__c/fields/Accord_client_sur_conditions_reserves__c.field-meta.xml
<CustomField>
    <fullName>Accord_client_sur_conditions_reserves__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accord client sur conditions et reserves</label>
    <type>Checkbox</type>
</CustomField>