force-app/main/default/objects/Dossier__c/fields/ACP_depuis__c.field-meta.xml
<CustomField>
    <fullName>ACP_depuis__c</fullName>
    <formula>If(
( Doss_Temp__c  = &quot;Hot&quot;),TODAY() -  D_Signature_de_OPC__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACP depuis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>