force-app/main/default/objects/Dossier__c/fields/ADB2__c.field-meta.xml
<CustomField>
    <fullName>ADB2__c</fullName>
    <formula>IF(
(Etape_Actuelle__c = &quot;Attente Décision Banque&quot;),TODAY() - Date_Compl_tude_Dossier__c,

IF(
(Etape_Actuelle__c = &quot;Retour à charges&quot;),TODAY() - D_Retour_a_charges__c ,


0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADB2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>