force-app/main/default/objects/Dossier__c/fields/ADB_Depuis__c.field-meta.xml
<CustomField>
    <fullName>ADB_Depuis__c</fullName>
    <formula>If(
(Etape_Actuelle__c = &quot;Attente Décision Banque&quot;) &amp;&amp;  (Pieces_manquantes_P1__c = False),TODAY() - Date_depot_dossier__c, 

IF(
(Etape_Actuelle__c = &quot;Attente Décision Banque&quot;) &amp;&amp;  (Pieces_manquantes_P1__c = True),TODAY() -  Date_Compl_tude_Dossier__c,

IF(
(Etape_Actuelle__c = &quot;Retour à charges&quot;),TODAY() -   D_Retour_a_charges__c ,


0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADB Depuis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>