force-app/main/default/objects/Dossier__c/fields/ADD_depuis__c.field-meta.xml
<CustomField>
    <fullName>ADD_depuis__c</fullName>
    <formula>If( 
(Dossier_d_bloqu__c = False), Today()- Dte_contrat_legalise_remis_pr_client__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADD depuis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>