force-app/main/default/objects/Dossier__c/fields/Adresse_de_facturation_Client__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_facturation_Client__c</fullName>
    <formula>Banque__r.Adresse_de_facturation_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de facturation Client</label>
    <type>Text</type>
</CustomField>