force-app/main/default/objects/Dossier__c/fields/Adresse_Medecin__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Medecin__c</fullName>
    <label>Adresse Médecin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>