force-app/main/default/objects/Dossier__c/fields/AE_IND_APPORTEUR__c.field-meta.xml
<CustomField>
    <fullName>AE_IND_APPORTEUR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE IND APPORTEUR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (AE IND APPORTEUR)</relationshipLabel>
    <relationshipName>Dossiers6</relationshipName>
    <type>Lookup</type>
</CustomField>