force-app/main/default/objects/Dossier__c/fields/AE_IND_PARRAIN__c.field-meta.xml
<CustomField>
    <fullName>AE_IND_PARRAIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE IND PARRAIN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (AE IND PARRAIN)</relationshipLabel>
    <relationshipName>Dossiers4</relationshipName>
    <type>Lookup</type>
</CustomField>