force-app/main/default/objects/Dossier__c/fields/AE_IND_SUPER_APP__c.field-meta.xml
<CustomField>
    <fullName>AE_IND_SUPER_APP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE IND SUPER APP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (AE IND SUPER APP)</relationshipLabel>
    <relationshipName>Dossiers5</relationshipName>
    <type>Lookup</type>
</CustomField>