force-app/main/default/objects/Dossier__c/fields/Agence_bancaire__c.field-meta.xml
<CustomField>
    <fullName>Agence_bancaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence bancaire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (Agence bancaire)</relationshipLabel>
    <relationshipName>DossiersAgenceBancaire</relationshipName>
    <type>Lookup</type>
</CustomField>