force-app/main/default/objects/Dossier__c/fields/APM_depuis__c.field-meta.xml
<CustomField>
    <fullName>APM_depuis__c</fullName>
    <formula>If(
(Etape_Actuelle__c = &quot;Pièces manquantes P1&quot;),TODAY() -  D_Pieces_manquantes_P1__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM depuis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>