force-app/main/default/objects/Dossier__c/fields/Apport__c.field-meta.xml
<CustomField>
    <fullName>Apport__c</fullName>
    <label>Apport</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>