force-app/main/default/objects/Dossier__c/fields/Apporteur__c.field-meta.xml
<CustomField>
    <fullName>Apporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apporteur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dossiers (Commercial)</relationshipLabel>
    <relationshipName>Dossiers_Soumis</relationshipName>
    <type>Lookup</type>
</CustomField>