force-app/main/default/objects/Dossier__c/fields/Apporteur_Contact__c.field-meta.xml
<CustomField>
    <fullName>Apporteur_Contact__c</fullName>
    <formula>contact__r.Apporteur_Contact__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apporteur Contact</label>
    <type>Text</type>
</CustomField>