force-app/main/default/objects/Dossier__c/fields/Apporteur_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Apporteur_Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apporteur_Dossier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (Apporteur)</relationshipLabel>
    <relationshipName>DossiersApporteur</relationshipName>
    <type>Lookup</type>
</CustomField>