force-app/main/default/objects/Dossier__c/fields/ASO_depuis__c.field-meta.xml
<CustomField>
    <fullName>ASO_depuis__c</fullName>
    <formula>If(
( Doss_Temp__c  = &quot;Warm&quot;),TODAY() -  Date_accord_dossier__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASO depuis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>