force-app/main/default/objects/Dossier__c/fields/Attestation_de_decompte_Solde_du_cr_dit__c.field-meta.xml
<CustomField>
    <fullName>Attestation_de_decompte_Solde_du_cr_dit__c</fullName>
    <inlineHelpText>Attestation de decompte/Solde du crédit objet du rachat</inlineHelpText>
    <label>Attestation de décompte/Solde du crédit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non requis</fullName>
            </value>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>