force-app/main/default/objects/Dossier__c/fields/Attestation_de_main_lev_e_Sign_e__c.field-meta.xml
<CustomField>
    <fullName>Attestation_de_main_lev_e_Sign_e__c</fullName>
    <inlineHelpText>Attestation de main levée  -  - Signé-e &amp; Cacheté-e</inlineHelpText>
    <label>Attestation de main levée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non requis</fullName>
            </value>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>