force-app/main/default/objects/Dossier__c/fields/Attestation_de_travail__c.field-meta.xml
<CustomField>
    <fullName>Attestation_de_travail__c</fullName>
    <inlineHelpText>Attestation de travail - 2 MOIS - Signé-e &amp; Cacheté-e - P1 Copie P2 Original</inlineHelpText>
    <label>Attestation de travail - 2 MOIS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>