force-app/main/default/objects/Dossier__c/fields/Attestation_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Attestation_en_cours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attestation en cours</label>
    <type>Checkbox</type>
</CustomField>