force-app/main/default/objects/Dossier__c/fields/Autre_conditions_propos_es_OB__c.field-meta.xml
<CustomField>
    <fullName>Autre_conditions_propos_es_OB__c</fullName>
    <label>Autre conditions proposées - OB</label>
    <type>TextArea</type>
</CustomField>