force-app/main/default/objects/Dossier__c/fields/Autres_conditions_demand_es_au_client__c.field-meta.xml
<CustomField>
    <fullName>Autres_conditions_demand_es_au_client__c</fullName>
    <label>Autres conditions demandées au client</label>
    <type>TextArea</type>
</CustomField>