force-app/main/default/objects/Dossier__c/fields/Autres_conditions_propos_es_au_client__c.field-meta.xml
<CustomField>
    <fullName>Autres_conditions_propos_es_au_client__c</fullName>
    <label>Autres conditions proposées au client</label>
    <type>TextArea</type>
</CustomField>