force-app/main/default/objects/Dossier__c/fields/Avis_d_imposition__c.field-meta.xml
<CustomField>
    <fullName>Avis_d_imposition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avis d&apos;imposition / P60</label>
    <type>Checkbox</type>
</CustomField>