force-app/main/default/objects/Dossier__c/fields/Avis_imposition__c.field-meta.xml
<CustomField>
    <fullName>Avis_imposition__c</fullName>
    <inlineHelpText>Avis d&apos;imposition - 2 ANS -  - P1 Copie P2 Original    Avis d&apos;imposition - 2 ANS -  - P1 Copie P2 Original</inlineHelpText>
    <label>Avis d&apos;imposition - 2 ANS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>