force-app/main/default/objects/Dossier__c/fields/Banque__c.field-meta.xml
<CustomField>
    <fullName>Banque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banque</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (Banque)</relationshipLabel>
    <relationshipName>Dossiers_Banque</relationshipName>
    <type>Lookup</type>
</CustomField>