force-app/main/default/objects/Dossier__c/fields/Banque_concurrente__c.field-meta.xml
<CustomField>
    <fullName>Banque_concurrente__c</fullName>
    <label>Banque concurrente</label>
    <type>TextArea</type>
</CustomField>