force-app/main/default/objects/Dossier__c/fields/Banquier__c.field-meta.xml
<CustomField>
    <fullName>Banquier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banquier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers (Banquier)</relationshipLabel>
    <relationshipName>DossiersBanquier</relationshipName>
    <type>Lookup</type>
</CustomField>