force-app/main/default/objects/Dossier__c/fields/Bilans_de_la_soci_t__c.field-meta.xml
<CustomField>
    <fullName>Bilans_de_la_soci_t__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bilans de la société</label>
    <type>Checkbox</type>
</CustomField>