force-app/main/default/objects/Dossier__c/fields/Bilans_de_la_societe__c.field-meta.xml
<CustomField>
    <fullName>Bilans_de_la_societe__c</fullName>
    <inlineHelpText>Bilans (CPC +ACTIF +PASSIF sans  annexes)  - 2 ANS - Signé-e &amp; Cacheté-e - P1 Copie</inlineHelpText>
    <label>Bilans (CPC+ACTIF+PASSIF sans  annexes)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>