force-app/main/default/objects/Dossier__c/fields/CANEVAS_GENERE__c.field-meta.xml
<CustomField>
    <fullName>CANEVAS_GENERE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CANEVAS GENERE</label>
    <type>Checkbox</type>
</CustomField>