force-app/main/default/objects/Dossier__c/fields/CanevasGeneratedBy__c.field-meta.xml
<CustomField>
    <fullName>CanevasGeneratedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CanevasGeneratedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GenerateCanevas</relationshipName>
    <type>Lookup</type>
</CustomField>