force-app/main/default/objects/Dossier__c/fields/Capacit_mensuel_d_emprunt__c.field-meta.xml
<CustomField>
    <fullName>Capacit_mensuel_d_emprunt__c</fullName>
    <label>Capacité mensuel d&apos;emprunt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>