force-app/main/default/objects/Dossier__c/fields/Carte_Pro_Autorisation_d_exercer__c.field-meta.xml
<CustomField>
    <fullName>Carte_Pro_Autorisation_d_exercer__c</fullName>
    <inlineHelpText>Autorisation administrative d&apos;exercice ou carte professionnelle  - 2 ANS</inlineHelpText>
    <label>Autorisation administrative d&apos;exercice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>