force-app/main/default/objects/Dossier__c/fields/CDP_Sign_s_Y_N__c.field-meta.xml
<CustomField>
    <fullName>CDP_Sign_s_Y_N__c</fullName>
    <formula>If( Contrat_l_galis_transmis_par_client__c  = True  ||  Dossier_d_bloqu__c = True || Facture_Payee_global__c =True,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDP Signés Y/N ?</label>
    <type>Checkbox</type>
</CustomField>