force-app/main/default/objects/Dossier__c/fields/Certificat_de_propri_t_du_bien__c.field-meta.xml
<CustomField>
    <fullName>Certificat_de_propri_t_du_bien__c</fullName>
    <inlineHelpText>Certificat de propriété du bien objet du crédit demandé</inlineHelpText>
    <label>Certificat de propriété du bien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non requis</fullName>
            </value>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>