force-app/main/default/objects/Dossier__c/fields/Certificat_propriete__c.field-meta.xml
<CustomField>
    <fullName>Certificat_propriete__c</fullName>
    <inlineHelpText>Certificats fonciers ou  Moulkia des biens en location -  -  - P1 Copie P2 Copie légalisée</inlineHelpText>
    <label>Certificats fonciers ou Moulkia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>