force-app/main/default/objects/Dossier__c/fields/ch_ance_mensuelle_OC__c.field-meta.xml
<CustomField>
    <fullName>ch_ance_mensuelle_OC__c</fullName>
    <label>Échéance mensuelle - OC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>