force-app/main/default/objects/Dossier__c/fields/ch_ance_mensuelle_TTC_OB__c.field-meta.xml
<CustomField>
    <fullName>ch_ance_mensuelle_TTC_OB__c</fullName>
    <label>Échéance mensuelle TTC - OB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>