force-app/main/default/objects/Dossier__c/fields/Cheque_Banque_remis_au_notaire__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Banque_remis_au_notaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Banque remis au notaire</label>
    <type>Checkbox</type>
</CustomField>