force-app/main/default/objects/Dossier__c/fields/com_Brut_en_V_HT_SOS__c.field-meta.xml
<CustomField>
    <fullName>com_Brut_en_V_HT_SOS__c</fullName>
    <formula>CASE(COM_SOS_BRUT_en__c,&quot;0%&quot;, 0.00,&quot;1%&quot;, 0.01,&quot;0.5%&quot;, 0.005,NULL)*  Montant_du_Financement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>com - Brut en V HT -SOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>