force-app/main/default/objects/Dossier__c/fields/Com_MCI_estim_e__c.field-meta.xml
<CustomField>
    <fullName>Com_MCI_estim_e__c</fullName>
    <formula>com_Brut_en_V_HT_SOS__c * DCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Com MCI prob. sur Doss HOT_WARM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>