force-app/main/default/objects/Dossier__c/fields/COM_SOS_BRUT_en__c.field-meta.xml
<CustomField>
    <fullName>COM_SOS_BRUT_en__c</fullName>
    <label>Com est SOS Brut in %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1%</fullName>
                <default>true</default>
                <label>1%</label>
            </value>
            <value>
                <fullName>0.5%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>