force-app/main/default/objects/Dossier__c/fields/Commentaires_financement__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_financement__c</fullName>
    <label>Résumé situation dossier</label>
    <type>TextArea</type>
</CustomField>