force-app/main/default/objects/Dossier__c/fields/Commentaires_garantie__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_garantie__c</fullName>
    <label>Commentaires liés à la garantie</label>
    <type>TextArea</type>
</CustomField>