force-app/main/default/objects/Dossier__c/fields/Commission_parrain_MCI__c.field-meta.xml
<CustomField>
    <fullName>Commission_parrain_MCI__c</fullName>
    <formula>(
IF(ISBLANK( Parrain_auto_filled__c),0,
com_Brut_en_V_HT_SOS__c * 0.5)
)</formula>
    <label>Commission parrain MCI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>