force-app/main/default/objects/Dossier__c/fields/Compromis_de_vente__c.field-meta.xml
<CustomField>
    <fullName>Compromis_de_vente__c</fullName>
    <inlineHelpText>Compromis de vente visé par le notaire, acte de reservation visé par le promoteur ou attestation de notaire OU descriptif de bien ou Contrat de vente preliminaire et cahier de charges signé et légalisé dans le cadre d&apos;une VEFA. -  - Signé et/ou cacheté -</inlineHelpText>
    <label>Compromis de vente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>