force-app/main/default/objects/Dossier__c/fields/Compte_Bancaire_Ouvert__c.field-meta.xml
<CustomField>
    <fullName>Compte_Bancaire_Ouvert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ouverture de compte réalisée</label>
    <type>Checkbox</type>
</CustomField>