force-app/main/default/objects/Dossier__c/fields/Confirmation_Envoi_l_analyse__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Envoi_l_analyse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Envoi à l&apos;analyse</label>
    <type>Checkbox</type>
</CustomField>