force-app/main/default/objects/Dossier__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dossiers</relationshipLabel>
    <relationshipName>Dossiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>