force-app/main/default/objects/Dossier__c/fields/Contrat_de_travail__c.field-meta.xml
<CustomField>
    <fullName>Contrat_de_travail__c</fullName>
    <inlineHelpText>Contrat de travail CDI -  - Signé-e &amp; Cacheté-e - P1 Copie P2 Copie légalisée</inlineHelpText>
    <label>Contrat de travail CDI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>