force-app/main/default/objects/Dossier__c/fields/Contrat_de_travail_homologue__c.field-meta.xml
<CustomField>
    <fullName>Contrat_de_travail_homologue__c</fullName>
    <inlineHelpText>Contrat de travail homologué par le ministère -  - Signé-e &amp; Cacheté-e - P1 Copie P2 Original</inlineHelpText>
    <label>Contrat de travail homologué par le mini</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
            <value>
                <fullName>REQUIS P1</fullName>
                <isActive>false</isActive>
                <label>REQUIS P1</label>
            </value>
            <value>
                <fullName>REQUIS P2</fullName>
                <isActive>false</isActive>
                <label>REQUIS P2</label>
            </value>
            <value>
                <fullName>REQUIS P3</fullName>
                <isActive>false</isActive>
                <label>REQUIS P3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>