force-app/main/default/objects/Dossier__c/fields/Contrat_l_galis_transmis_par_client__c.field-meta.xml
<CustomField>
    <fullName>Contrat_l_galis_transmis_par_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat légalisé transmis par client</label>
    <type>Checkbox</type>
</CustomField>