force-app/main/default/objects/Dossier__c/fields/Copie_CIN__c.field-meta.xml
<CustomField>
    <fullName>Copie_CIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copie CIN</label>
    <type>Checkbox</type>
</CustomField>